added id to submit button input so that it can be removed in js

--- a/views/main.hbs
+++ b/views/main.hbs
@@ -8,7 +8,7 @@
             <form id="mp3Form">
                 <div class="form-group">
                     <label>Give your File a name:</label>
-                    <input type="text" name="mp3name">
+                    <input id="submitField" type="text" name="mp3name">
                     <button type="submit">Upload</button>
                 </div>
             </form>
