changed fetch to simply /recordingsDirectory instead of /recordingsDirectory/get since the previous didn't make sense with a get HTTP request

--- a/views/recordings.hbs
+++ b/views/recordings.hbs
@@ -39,7 +39,7 @@
                     "Content-Type": "application/json"
                 }
             }
-            fetch('/recordingsDirectory/get?id='+audioId, options)
+            fetch('/recordingsDirectory?id='+audioId, options)
             .then(response => response.json())
             .then(data => {
                 document.getElementById('fileName').innerHTML = data.name
