--- a/views/recordings.hbs
+++ b/views/recordings.hbs
@@ -44,7 +44,7 @@
             .then(data => {
                 document.getElementById('fileName').innerHTML = data.name
                 document.getElementById('Date').innerHTML = data.date
-                document.getElementById('audioControl').setAttribute('src', './uploads/'+audioId+'.mp3') 
+                document.getElementById('audioControl').setAttribute('src', data.href) 
             })
         }
 
